adds photo bucket

--- a/main_app/templates/main_app/weapon_form.html
+++ b/main_app/templates/main_app/weapon_form.html
@@ -4,7 +4,7 @@
     {% if object %}
         <h1>Edit <span class="teal-text">{{object.name}}</span> </h1> 
     {% else %}
-        <h1>New Friend</h1> 
+        <h1>New Weapon</h1> 
     {% endif %}
 <form action="" method="POST">
     {% csrf_token %}
