--- a/main_app/templates/figures/detail.html
+++ b/main_app/templates/figures/detail.html
@@ -74,4 +74,12 @@
     {% else %}
         <h5>No Weapons </h5>
     {% endif %} 
+
+    </div>
+    <!-- Insert photo markup below this comment -->
+    {% for photo in cat.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
 {% endblock %}
