--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,33 +14,33 @@
 <body>
     <header>
         <nav>
-            <div class="nav-wrapper blue-grey darken-2">
+            <div class="nav-wrapper purple darken-2">
                 <ul>
                     <li>
                         <a href="/" class="left brand-logo">&nbsp;&nbsp;Figure Collector</a>
                     </li>
                     <li>
                         {% if user.is_authenticated %}
-                       <h4 class="center brand-logo" >Welcome! {{ request.user }}</h4>
+                       <h6 class="center brand-logo" >Welcome! {{ request.user }}</h6>
                        {% endif %}
                     </li>
                 </ul>
                 <ul class="right">
                     <li>
-                        <a href="{% url 'about' %}" class="hoverable z-depth blue-grey darken-1">About</a>
+                        <a href="{% url 'about' %}" class="hoverable z-depth rebeccapurple darken-1">About</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li>
-                            <a href="{% url 'figures' %}" class="hoverable z-depth blue-grey"> View all my Figures</a>
+                            <a href="{% url 'figures' %}" class="hoverable z-depth rebeccapurple"> View all my Figures</a>
                         </li>
                         <li>
-                            <a href="{% url 'figures_create' %}" class="hoverable z-depth blue-grey">Add a Figure</a>
+                            <a href="{% url 'figures_create' %}" class="hoverable z-depth rebeccapurple">Add a Figure</a>
                         </li>
                         <li>
-                            <a href="{% url 'weapons_create' %}" class="hoverable z-depth blue-grey lighten-1">Add a Weapon</a>
+                            <a href="{% url 'weapons_create' %}" class="hoverable z-depth rebeccapurple lighten-1">Add a Weapon</a>
                         </li>
                         <li>
-                            <a href="{% url 'weapons_index' %}" class="hoverable z-depth blue-grey lighten-1">View All my Weapons</a>    
+                            <a href="{% url 'weapons_index' %}" class="hoverable z-depth rebeccapurple lighten-1">View All my Weapons</a>    
                         </li>
                         <li>
                             <a href="{% url 'logout' %}">Log Out</a>    
