--- a/main_app/templates/figures/index.html
+++ b/main_app/templates/figures/index.html
@@ -10,8 +10,8 @@
     <a href="{% url 'detail' figure.id %}">
         <div class="card-content">
             <h3 class="card-title">{{ figure.name}}</h3>
-            <h6>Type: {{figure.tyype}} </h6>
-            <h6>Cost: {{hobby.cost}} </h6>
+            <h6>Type: {{figure.type}} </h6>
+            <h6>Cost: {{figure.cost}} </h6>
         </div> 
     </a>    
 </div>
