--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,8 @@
+{% extends 'base.html' %}
 {% block content %}
 
 <h1>About the Figure Collector</h1>
 <hr />
-<p>Hire the Figure Collector!</p>
+<p>Check out these figures!</p>
 
 {% endblock %}
